--- a/src/index.html
+++ b/src/index.html
@@ -1,56 +1,54 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Верстка «NEW_PROJECT_NAME»</title>
+  </head>
 
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Верстка «NEW_PROJECT_NAME»</title>
-</head>
-
-<body>
-   <div class="rootpage">
+  <body>
+    <div class="rootpage">
       <h1>Верстка «NEW_PROJECT_NAME»</h1>
-      <div class="rootpage__info">
-         Опис проєкту
-      </div>
+      <div class="rootpage__info">Опис проєкту</div>
       <h2>Готові сторінки:</h2>
       <ol class="rootpage__list">
-         <li><a target="_blank" href="home.html">Головна</a></li>
-         <li><a target="_blank" href="user.html">Пользователям</a></li>
-         <li><a target="_blank" href="rule.html">Правила обмена</a></li>
-         <li><a target="_blank" href="review.html">Відгуки</a></li>
-         <li><a target="_blank" href="partner.html">"Партнерам</a></li>
-         <li><a target="_blank" href="monitor.html">Мониторингам</a></li>
-         <li><a target="_blank" href="faq.html">Faq</a></li>
-         <li><a target="_blank" href="contact.html">Контакты</a></li>
-         <li><a target="_blank" href="sale.html">Cкидки</a></li>
-         <li><a target="_blank" href="reset.html">Восстановление пароля</a></li>
-         <li><a target="_blank" href="reset2.html">Восстановление пароля</a></li>
-         <li><a target="_blank" href="register.html">Регистрация</a></li>
-         <li><a target="_blank" href="404.html">404</a></li>
-         <li><a target="_blank" href="403.html">403</a></li>
-         <li><a target="_blank" href="lk01.html">Личный кабинет</a></li>
-         <li><a target="_blank" href="lk04.html">Личный кабинет</a></li>
-         <li><a target="_blank" href="lk03.html">Личный кабинет заявки</a></li>
-         <li><a target="_blank" href="lk02.html">Личный кабинет заявки</a></li>
+        <li><a target="_blank" href="home.html">Головна</a></li>
+        <li><a target="_blank" href="user.html">Пользователям</a></li>
+        <li><a target="_blank" href="rule.html">Правила обмена</a></li>
+        <li><a target="_blank" href="review.html">Відгуки</a></li>
+        <li><a target="_blank" href="partner.html">"Партнерам</a></li>
+        <li><a target="_blank" href="monitor.html">Мониторингам</a></li>
+        <li><a target="_blank" href="faq.html">Faq</a></li>
+        <li><a target="_blank" href="contact.html">Контакты</a></li>
+        <li><a target="_blank" href="sale.html">Cкидки</a></li>
+        <li><a target="_blank" href="reset.html">Восстановление пароля</a></li>
+        <li><a target="_blank" href="reset2.html">Восстановление пароля</a></li>
+        <li><a target="_blank" href="register.html">Регистрация</a></li>
+        <li><a target="_blank" href="404.html">404</a></li>
+        <li><a target="_blank" href="403.html">403</a></li>
+        <li><a target="_blank" href="lk01.html">Личный кабинет</a></li>
+        <li><a target="_blank" href="lk01.html">Личный кабинет new page</a></li>
+        <li><a target="_blank" href="lk04.html">Личный кабинет</a></li>
+        <li><a target="_blank" href="lk03.html">Личный кабинет заявки</a></li>
+        <li><a target="_blank" href="lk02.html">Личный кабинет заявки</a></li>
       </ol>
-   </div>
-</body>
-<style>
-   @charset "UTF-8";
-   @import url("https://fonts.googleapis.com/css?family=Montserrat:regular,700&display=swap");
+    </div>
+  </body>
+  <style>
+    @charset "UTF-8";
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:regular,700&display=swap');
 
-   *,
-   *::before,
-   *::after {
+    *,
+    *::before,
+    *::after {
       padding: 0px;
       margin: 0px;
       border: 0px;
       box-sizing: border-box;
-   }
+    }
 
-   html,
-   body {
+    html,
+    body {
       height: 100%;
       margin: 0;
       padding: 0;
@@ -58,124 +56,121 @@
       width: 100%;
       color: #fff;
       background-color: #5e5373;
-   }
+    }
 
-   body {
+    body {
       font-family: Montserrat;
       font-size: 100%;
       line-height: 1;
       font-size: 1rem;
-   }
+    }
 
-   a {
+    a {
       text-decoration: underline;
-      color: #ebe691
-   }
+      color: #ebe691;
+    }
 
-   a:visited {
+    a:visited {
       text-decoration: underline;
       color: #aaa768;
-   }
+    }
 
-   a:hover {
+    a:hover {
       text-decoration: none;
-   }
+    }
 
-   ul li {
+    ul li {
       list-style: none;
-   }
+    }
 
-   img {
+    img {
       vertical-align: top;
-   }
+    }
 
-   .wrapper {
+    .wrapper {
       width: 100%;
       min-height: 100%;
       overflow: hidden;
-   }
+    }
 
-   .rootpage {
+    .rootpage {
       padding: 30px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-   }
+    }
 
-   @media (max-width: 767px) {
+    @media (max-width: 767px) {
       .rootpage {
-         padding: 30px 15px;
+        padding: 30px 15px;
       }
-   }
+    }
 
-   h1 {
+    h1 {
       color: #ebe691;
       font-size: 2.5rem;
       margin: 0px 0px 1.25rem 0px;
-   }
+    }
 
-   @media (max-width: 767px) {
+    @media (max-width: 767px) {
       h1 {
-         font-size: 1.85rem;
-         margin: 0px 0px 1.25rem 0px;
+        font-size: 1.85rem;
+        margin: 0px 0px 1.25rem 0px;
       }
-   }
+    }
 
-   h2 {
+    h2 {
       color: #ebe691;
       font-size: 1.25rem;
       margin: 0px 0px 1rem 0px;
-   }
+    }
 
-   @media (max-width: 767px) {
+    @media (max-width: 767px) {
       h2 {
-         font-size: 1.125rem;
-         margin: 0px 0px 1rem 0px;
+        font-size: 1.125rem;
+        margin: 0px 0px 1rem 0px;
       }
-   }
+    }
 
-   .rootpage__info {
+    .rootpage__info {
       line-height: 140%;
       margin: 0px 0px 1.5rem 0px;
-   }
+    }
 
-   .rootpage__list {
+    .rootpage__list {
       margin: 0px 0px 2.25rem 1.25rem;
-   }
+    }
 
-   .rootpage__list li:not(:last-child) {
+    .rootpage__list li:not(:last-child) {
       margin: 0px 0px 15px 0px;
-   }
+    }
 
-   .rootpage__contacts,
-   .rootpage__tnx {
+    .rootpage__contacts,
+    .rootpage__tnx {
       border-radius: 200px;
       padding: 20px 65px;
       line-height: 140%;
-   }
+    }
 
-   @media (max-width: 767px) {
-
+    @media (max-width: 767px) {
       .rootpage__contacts,
       .rootpage__tnx {
-         border-radius: 40px;
-         padding: 20px;
+        border-radius: 40px;
+        padding: 20px;
       }
-   }
+    }
 
-   .rootpage__contacts {
+    .rootpage__contacts {
       background: #32b5a4;
+    }
 
-   }
-
-   .rootpage__contacts a {
+    .rootpage__contacts a {
       color: #ebe691;
-   }
+    }
 
-   .rootpage__tnx {
+    .rootpage__tnx {
       background: #c22d63;
       margin: 0px 0px 1rem 0px;
-   }
-</style>
-
+    }
+  </style>
 </html>
